2004-01-22  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkwidget.c: Add Gtk::Widget.install_style_property, .style_property.

2004-01-13  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkallocation.c: Add Gtk::Allocation#to_rect. 
	* src/rbgtktextbuffer.c: Gtk::TextBuffer#insert_with_tags, 
	#insert_pixbuf,	#insert_child_anchor are deprecated. 
	Use Gtk::TextBuffer#insert instead.
	* sample/gtk-demo/textview.rb: Apply above changes.

2003-01-10  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkspinbutton.c: Fix a bug of Gtk::SpinButton#range.
	Pointed out by Thomas Hunger.

2003-12-27  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtktextiter.c: Gtk::TextIter#char returns String. 

2003-12-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtktreeviewcolumn.c: Fix a segfault in Gtk::TreeViewColumn#set_cell_data_func.

2003-12-21  Kenichi Komiya <kom@mail1.accsnet.ne.jp>

	* src/rbgtkbindingset.c: Fix a segfault.
	* src/rbgtktexttagtable.c, rbgtktexttag.c, rbgdkcolormap.c: 
	Use G_INITIALIZE instead of RBGTK_INITIALIZE, because they are not Gtk::Object.

2003-12-20  Kenichi Komiya <kom@mail1.accsnet.ne.jp>

	* src/rbgtkbindingset.c: Add Gtk::BindingSet#add_signal. Fix some bugs.
	* src/rbgtkobject.c: Add Gtk::Object.binding_set.
	* sample/misc/bindings.rb: Added.

2003-12-19  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkobject.c (Init_gtk_object): Remove Gtk::Object#activate_binding.

2003-12-04  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtksizegroup.c: Apply Enums, properties.
	Reported by Jan Weil.

2003-11-27  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkwindow.c: Gdk::Window#set_cursor accept nil. 

2003-11-24  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdk.c: Fix compilation error for GTK+-2.0. 
	* sample/gtk-demo/README, ruby-gnome2-logo.png: Added.
	* sample/gtk-demo/pixbufs.rb: Follow API change of Gdk::RGB.draw_rgb_image.
	* src/rbgdk.c, rbgdkdragcontext.c: Fix compilation error for GTK+-2.0. 

2003-11-22  Masao Mutoh  <mutoh@highway.ne.jp>
